# Eido

./: .gitignore  README.md  implementation_plan.md  skills-lock.json
backend/: .env.example  .gitignore  IMPLEMENTATION_INDEX.txt  README-NEW.md  README.md  pyproject.toml  start.py  test_phase2.py  test_phase2_full.py  test_skill_loader.py  tmp_test_parse.py  validate_ai_runtime.py
backend/app/: exceptions.py  logger.py  logging.py  main.py
backend/app/agent/: context_optimizer.py
backend/app/api/controllers/: agent_controller.py  deploy_controller.py  mvp_controller.py  token_controller.py
backend/app/api/dependencies/: auth.py
backend/app/api/middleware/: error_handler.py  request_logging.py
backend/app/api/routes/: __init__.py  agent_routes.py  auth_routes.py  billing_routes.py  dashboard.py  deploy_routes.py  mvp.py  token_routes.py  users_routes.py  waitlist_routes.py
backend/app/api/schemas/: agent.py  auth.py  billing.py  mvp.py  token.py  waitlist.py
backend/app/api/services/: agent_service.py  auth_service.py  billing_service.py  deploy_service.py  mvp_service.py  token_service.py  waitlist_service.py
backend/app/config/: settings.py
backend/app/db/: __init__.py  mock_data.py
backend/app/integrations/: deployment.py  eido_webhook.py  moltbook.py  surge.py
backend/app/middleware/: metrics_middleware.py  rate_limiter.py
backend/app/models/: agent_run.py  billing.py  mvp.py  token.py  user.py  waitlist.py
backend/app/moltbook/: publisher.py  tools.py
backend/app/monitoring/: __init__.py  alerting.py  health.py  metrics.py
backend/app/repositories/: __init__.py  agent_run_repository.py  mvp_repository.py
backend/app/security/: session_token.py
backend/app/services/: __init__.py  pipeline.py  sse_service.py
backend/app/services/ai_runtime/: __init__.py  (+12 more)
backend/app/utils/: __init__.py  decorators.py  state_validator.py  validators.py
backend/moltbook/: check_activity.py  check_moltbook.py  register_moltbook.py
backend/tests/: test_auth_waitlist_billing.py  test_integrations_direct.py  test_moltbook_talk.py  test_phase1.py  test_phase2.py  test_phase2_full.py  test_phase4.py  test_rate_limiting_and_monitoring.py  test_sse_client.py  test_surge_logo.py  test_toon.py  test_trigger_api.py  validate_architecture.py
(+94 files in other folders)
