[project]
name = "eido-backend"
version = "0.1.0"
description = "Backend service for EIDO autonomous startup factory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.101.1",
    "uvicorn[standard]>=0.23.2",
    "sqlmodel>=0.0.8",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "watchfiles>=0.21.0",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "crewai>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]