[project]
name = "eido-backend"
version = "0.1.0"
description = "Backend service for EIDO autonomous startup factory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.101.1",
    "uvicorn[standard]>=0.23.2",
    "sqlmodel>=0.0.8",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "crewai>=0.28.0",
    "tenacity>=9.1.0",
    "litellm>=1.75.3",
    "apscheduler>=3.11.2",
    "email-validator>=2.3.0",
    "loguru>=0.7.0",
    "python-multipart>=0.0.6",
    "prometheus-client>=0.19.0",
    "redis>=5.0.0",
    "e2b-code-interpreter>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "watchfiles>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
